--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -7,6 +7,8 @@ $btnColor  : rgb(202, 82, 82);
 $btnClickColor : #ca5252;
 body{background-color: #efefef;
     font-family: "Microsoft YaHei", 微软雅黑, 宋体, helvetica, "Hiragino Sans GB";}
+input:focus{border: 1px solid #e2e2e2;}
+.errorBorder{border: 1px solid $hoverColor};
 .hd-logoBox{width: 100%;
   height: 6.5rem;
   .hd-wrap{width: 50rem;margin: 0 auto;height: 100%;display: flex;
@@ -40,13 +42,14 @@ body{background-color: #efefef;
                       position: relative;
                       overflow: hidden;
                       border: 1px solid #ccc;
-                      img{position: absolute;
+                      >div{position: absolute;
                       left: 1px;
                         &:hover{cursor: pointer;}}
-                      span{position: absolute;
+                      >span{position: absolute;
                       right: 30%;
                       color: #999;
                       top: 50%;
+                      display: none;
                       transform: translateY(-50%)}}}
       .phone-help{margin-top: 3px;}
       .user-count{input{width: 10rem;height:2.1rem;margin-right: .5rem}
@@ -65,6 +68,8 @@ body{background-color: #efefef;
   }
 }
 
+#btnGetMsgCode:hover{opacity: 1;cursor: pointer;}
+
 button{border: none;color: #fff;}
 input,button,select,option{outline: none;font-family: '微软雅黑';}
 select{border-color: #e2e2e2;}
@@ -78,7 +83,7 @@ input{padding: 0;
   &:focus{border-color: $switchColor;}}
 .switch-internation-num{a{color: $switchColor}}
 .phone-help{span{color: $infoColor}}
-.msg-test-code{button{background-color: $testColor;opacity: .6;font: .8rem;}}
+.msg-test-code{button{background-color: $testColor;opacity: .6;font-size: .8rem;}}
 .btn-login{button{background-color: $btnColor;opacity: .6}}
 .login-info{color: #b1b1b1;width: 16rem;
   a{color: currentColor;&:hover{color: #666;}}}
