--- a/src/css/goodShopCart.css
+++ b/src/css/goodShopCart.css
@@ -3,12 +3,112 @@ html {
   font-size: 125%; }
 
 body {
-  font-family: "微软雅黑", Helvetica, Arial, "Hiragino Sans GB";
+  font-family: "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", 微软雅黑, tahoma, simsun, 宋体;
   font-size: .6rem;
   color: #666;
   overflow-x: hidden;
   margin: 0;
   padding: 0; }
+
+@font-face {
+  font-family: "fontawesome";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../css/fonts/font-awesome/fontawesome.eot");
+  src: url("../css/fonts/font-awesome/fontawesome.eot?#iefix") format("embedded-opentype"), url("../css/fonts/font-awesome/fontawesome-webfont.woff") format("woff"), url("../css/fonts/font-awesome/fontawesome.ttf") format("truetype"), url("../css/fonts/font-awesome/fontawesome.svg#fontawesome") format("svg"); }
+i[class^=icon] {
+  vertical-align: middle;
+  padding-right: 2px; }
+  i[class^=icon]:before {
+    font-family: "fontawesome" !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased; }
+  i[class^=icon]:hover {
+    text-decoration: none; }
+
+.icon-mobile:before {
+  content: "";
+  color: #e31436;
+  font-size: 16px; }
+
+.icon-flag:before {
+  content: "";
+  color: #e31436;
+  font-size: 14px; }
+
+.icon-money:before {
+  content: "";
+  color: #e31436;
+  font-size: 13px; }
+
+.icon-flag-aside:before {
+  content: "";
+  font-size: 20px;
+  color: #999; }
+
+.icon-mobile-aside:before {
+  content: "";
+  font-size: 30px;
+  color: #999; }
+
+.icon-shopcart-aside:before {
+  content: "";
+  font-size: 20px;
+  color: #999; }
+
+.icon-shopCart-btn:before {
+  content: "";
+  font-size: 16px;
+  color: #999; }
+
+.icon-angle-left:before {
+  content: "";
+  font-size: 50px;
+  color: #fff; }
+
+.icon-angle-right:before {
+  content: "";
+  font-size: 50px;
+  color: #fff; }
+
+.icon-github:before {
+  content: "";
+  font-size: 40px;
+  color: #333; }
+
+.icon-weibo:before {
+  content: "";
+  font-size: 40px;
+  color: #e31436; }
+
+.icon-heart-o:before {
+  content: "";
+  font-size: 20px;
+  color: #D22147; }
+  .icon-heart-o:before:hover {
+    text-decoration: none; }
+
+.icon-heart:before {
+  content: "";
+  font-size: 20px;
+  color: #d22147; }
+
+.icon-star:before {
+  content: "";
+  font-size: 11px;
+  color: #d22147;
+  margin-left: 1px;
+  line-height: 19px; }
+
+.icon-search-plus:before {
+  content: "";
+  font-size: 20px;
+  color: #999; }
 
 a {
   color: #666;
@@ -33,6 +133,22 @@ em {
   content: '.';
   height: 0;
   overflow: hidden; }
+
+.cart-goods-num {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #e31436;
+  font-weight: normal;
+  font-size: 12px;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  z-index: 5;
+  font-style: normal;
+  color: #fff;
+  text-align: center;
+  line-height: 24px; }
 
 h2 {
   margin-bottom: 0;
@@ -73,7 +189,7 @@ figure {
           flex: 1; }
 
 .m-cart .m-cart-wrap .cart-empty {
-  padding-top: 7.5rem;
+  padding: 7.5rem 0 6rem 0;
   text-align: center;
   height: 7.5rem; }
   .m-cart .m-cart-wrap .cart-empty .empty-txt {
@@ -97,7 +213,7 @@ figure {
 
 .goods .show-goods .current-active {
   position: relative;
-  padding-top: .5rem; }
+  padding: .5rem 0; }
   .goods .show-goods .current-active .active-pic {
     position: absolute;
     left: -1px;
@@ -138,6 +254,11 @@ figure {
       flex: 7; }
     .goods .show-goods .your-cart-goods .goods-item > div:nth-of-type(1) {
       flex: 1; }
+
+.col3, .col6 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
 
 .col1 {
   display: flex;
@@ -184,11 +305,12 @@ figure {
 .col4 > input {
   text-align: center;
   width: 43px;
-  height: 18px;
+  height: 20px;
   border: 1px solid #bcbcbc;
   border-left-width: 0;
   border-right-width: 0;
-  outline: none; }
+  outline: none;
+  padding: 0; }
   .col4 > input:focus {
     outline: none; }
 
@@ -198,7 +320,8 @@ figure {
   align-items: center; }
 
 .col6 > p {
-  color: #333; }
+  color: #333;
+  margin: 0; }
   .col6 > p:hover {
     cursor: pointer;
     color: currentColor;
@@ -225,15 +348,14 @@ figure {
   width: 17px;
   height: 18px;
   background: url(../img/checkboxIcons.png) no-repeat 0 -24px;
-  outline: none;
-  -webkit-appearance: none;
-  -moz-appearance: none; }
+  outline: none; }
 
 .cart-exist {
   width: 100%; }
   .cart-exist .mycartBox {
-    width: 85.15625%;
-    margin: 0 auto; }
+    width: 1090px;
+    margin: 0 auto;
+    margin-bottom: 3.5rem; }
     .cart-exist .mycartBox .mycart-short-info {
       display: flex;
       margin-bottom: 1rem; }
