--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -3,12 +3,112 @@ html {
   font-size: 125%; }
 
 body {
-  font-family: "微软雅黑", Helvetica, Arial, "Hiragino Sans GB";
+  font-family: "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", 微软雅黑, tahoma, simsun, 宋体;
   font-size: .6rem;
   color: #666;
   overflow-x: hidden;
   margin: 0;
   padding: 0; }
+
+@font-face {
+  font-family: "fontawesome";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../css/fonts/font-awesome/fontawesome.eot");
+  src: url("../css/fonts/font-awesome/fontawesome.eot?#iefix") format("embedded-opentype"), url("../css/fonts/font-awesome/fontawesome-webfont.woff") format("woff"), url("../css/fonts/font-awesome/fontawesome.ttf") format("truetype"), url("../css/fonts/font-awesome/fontawesome.svg#fontawesome") format("svg"); }
+i[class^=icon] {
+  vertical-align: middle;
+  padding-right: 2px; }
+  i[class^=icon]:before {
+    font-family: "fontawesome" !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased; }
+  i[class^=icon]:hover {
+    text-decoration: none; }
+
+.icon-mobile:before {
+  content: "";
+  color: #e31436;
+  font-size: 16px; }
+
+.icon-flag:before {
+  content: "";
+  color: #e31436;
+  font-size: 14px; }
+
+.icon-money:before {
+  content: "";
+  color: #e31436;
+  font-size: 13px; }
+
+.icon-flag-aside:before {
+  content: "";
+  font-size: 20px;
+  color: #999; }
+
+.icon-mobile-aside:before {
+  content: "";
+  font-size: 30px;
+  color: #999; }
+
+.icon-shopcart-aside:before {
+  content: "";
+  font-size: 20px;
+  color: #999; }
+
+.icon-shopCart-btn:before {
+  content: "";
+  font-size: 16px;
+  color: #999; }
+
+.icon-angle-left:before {
+  content: "";
+  font-size: 50px;
+  color: #fff; }
+
+.icon-angle-right:before {
+  content: "";
+  font-size: 50px;
+  color: #fff; }
+
+.icon-github:before {
+  content: "";
+  font-size: 40px;
+  color: #333; }
+
+.icon-weibo:before {
+  content: "";
+  font-size: 40px;
+  color: #e31436; }
+
+.icon-heart-o:before {
+  content: "";
+  font-size: 20px;
+  color: #D22147; }
+  .icon-heart-o:before:hover {
+    text-decoration: none; }
+
+.icon-heart:before {
+  content: "";
+  font-size: 20px;
+  color: #d22147; }
+
+.icon-star:before {
+  content: "";
+  font-size: 11px;
+  color: #d22147;
+  margin-left: 1px;
+  line-height: 19px; }
+
+.icon-search-plus:before {
+  content: "";
+  font-size: 20px;
+  color: #999; }
 
 a {
   color: #666;
@@ -34,6 +134,22 @@ em {
   height: 0;
   overflow: hidden; }
 
+.cart-goods-num {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #e31436;
+  font-weight: normal;
+  font-size: 12px;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  z-index: 5;
+  font-style: normal;
+  color: #fff;
+  text-align: center;
+  line-height: 24px; }
+
 /*考拉海淘登录页——头部*/
 .hd-sign {
   width: 100%; }
@@ -56,7 +172,7 @@ em {
       height: 5rem;
       right: 12.25%; }
   .hd-sign .hd-sign-sellpoint {
-    width: 85.15625%;
+    width: 1090px;
     margin: 0 auto;
     width: 50rem;
     height: 5rem;
@@ -97,7 +213,7 @@ em {
   height: 26rem; }
   .m-sign .m-sign-wrap {
     height: 26rem;
-    width: 85.15625%;
+    width: 1090px;
     margin: 0 auto;
     width: 50rem;
     position: relative; }
@@ -166,16 +282,19 @@ em {
             background-position: center -22px; }
           .m-sign .m-sign-wrap .sign-form .signBox form > div + div {
             margin-top: 16px; }
-          .m-sign .m-sign-wrap .sign-form .signBox form button {
+          .m-sign .m-sign-wrap .sign-form .signBox form input[type='button'] {
             width: 270px;
             height: 44px;
             background-color: #e31436;
             color: #fff;
             text-align: center;
             line-height: 44px;
-            border: none; }
-            .m-sign .m-sign-wrap .sign-form .signBox form button:hover {
-              background-color: #F5345E; }
+            border: none;
+            outline: none;
+            font-family: '微软雅黑'; }
+            .m-sign .m-sign-wrap .sign-form .signBox form input[type='button']:hover {
+              background-color: #F5345E;
+              cursor: pointer; }
       .m-sign .m-sign-wrap .sign-form .toLogin {
         width: 270px;
         margin: 0 auto;
@@ -184,10 +303,11 @@ em {
         line-height: .8rem;
         font-size: .6rem;
         margin-top: 1rem; }
-        .m-sign .m-sign-wrap .sign-form .toLogin span:last-child {
+        .m-sign .m-sign-wrap .sign-form .toLogin a:last-child {
           color: #51B8F1; }
-          .m-sign .m-sign-wrap .sign-form .toLogin span:last-child:hover {
-            cursor: pointer; }
+          .m-sign .m-sign-wrap .sign-form .toLogin a:last-child:hover {
+            cursor: pointer;
+            text-decoration: underline; }
       .m-sign .m-sign-wrap .sign-form .sign-sns {
         height: 22px;
         padding: 10px 26px 10px 29px;
@@ -205,6 +325,8 @@ em {
           height: 1rem;
           vertical-align: middle;
           padding: 0 .5rem; }
+          .m-sign .m-sign-wrap .sign-form .sign-sns i:hover {
+            cursor: pointer; }
         .m-sign .m-sign-wrap .sign-form .sign-sns i:nth-of-type(1) {
           background-position: -38rem -13.8rem; }
           .m-sign .m-sign-wrap .sign-form .sign-sns i:nth-of-type(1):hover {
@@ -255,7 +377,7 @@ footer {
     margin: 0;
     padding: 0;
     width: 50rem;
-    width: 85.15625%;
+    width: 1090px;
     margin: 0 auto;
     display: flex; }
     footer ul li {
